--- a/Pic98/src/Pic98/wwwroot/tpl/public/footer.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/footer.html
@@ -1,5 +1,8 @@
 {{define "footer"}}
-    <div><p>&copy; 2018 - [图酒吧] pic98.com <a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备17042145号-3</a></p></div>
+    <hr />
+    <footer>
+		<p>&copy; 2018 - [图酒吧] pic98.com <a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备17042145号-3</a></p>
+	</footer>
         <script src="/Js/jquery.js"></script>
         <script src="/Js/bootstrap.js"></script>
         <script src="/Js/site.js"></script>
