啊士大夫十大
撒旦飞洒地方

--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -1,7 +1,7 @@
 {{define "header"}}
      <head>
          <title>{{.Title}} - pic98.com [图酒吧]</title>
-        <link rel="stylesheet" href="/Css/bootstrap.css" />
+        <link rel="stylesheet" href="/Css/bootstrap.min.css" />
         <link rel="stylesheet" href="/Css/site.css" />
 
      </head>
