--- a/Pic98/src/Pic98/wwwroot/tpl/public/nav.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/nav.html
@@ -1,4 +1,45 @@
 {{define "nav"}}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">图酒吧[pic98.com]</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active"><a class="nav-link" href="/">首页</a></li>
+			<li class="nav-item"><a class="nav-link" href="/List/Jpmt/">街拍美腿</a></li>
+			<li class="nav-item"><a class="nav-link" href="/List/Jpgq/">高清街拍</a></li>
+			<li class="nav-item"><a class="nav-link" href="/List/Szyh/">丝足诱惑</a></li>
+			<li class="nav-item"><a class="nav-link" href="/List/Swgq/">丝袜高清</a></li>
+			<li class="nav-item"><a class="nav-link" href="/List/Gtmn/">高挑美女</a></li>
+	<!--
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>-->
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">查找</button>
+    </form>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link" href="/Account/Register">新用户注册</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Account/Login">登录</a></li>
+    </ul>	
+  </div>
+</nav>
+<!--
     <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
             <div class="navbar-header">
@@ -29,5 +70,6 @@
             </div>
         </div>
     </nav>
+	-->
 	
 {{end}}
