--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -5,16 +5,16 @@
     <h1 style="display:none;">{{.Title}}</h1>
 
     <div class="body-content">
-        
-		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-		    <ol class="carousel-indicators">
-		        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		        <li data-target="#myCarousel" data-slide-to="1"></li>
-		        <li data-target="#myCarousel" data-slide-to="2"></li>
-		    </ol>
-		    <div class="carousel-inner" role="listbox"  >
-		        <div class="item active h300"  >
-		            <img src="/Image/banner1.svg" alt="ASP.NET" class="img-responsive " />
+	
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/Image/banner/banner001.png" alt="First slide">
 		            <div class="carousel-caption" role="option">
 		                <p>
 		                    全网最新街拍合集！天天更新！
@@ -22,40 +22,42 @@
 		                        会员限时免费试看
 		                    </a>
 		                </p>
-		            </div>
-		        </div>
-		        <div class="item h300">
-		            <img src="/Image/banner2.svg" alt="Visual Studio" class="img-responsive " />
+		            </div>	
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/Image/banner2.svg" alt="Second slide">
 		            <div class="carousel-caption" role="option">
 		                <p>
 		                    街拍高挑美女每日更新！有惊喜！
-		                    <a class="btn btn-default" href="/Account/Login">
+		                    <a class="btn btn-default" href="/Account/Register">
 		                        注册新用户
 		                    </a>
 		                </p>
-		            </div>
-		        </div>
-		        <div class="item h300">
-		            <img src="/Image/banner3.svg" alt="Microsoft Azure" class="img-responsive " />
-		            <div class="carousel-caption" role="option">
+		            </div>	
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/Image/banner3.svg" alt="Third slide">
+			            <div class="carousel-caption" role="option">
 		                <p>
 		                    丝袜，丝足，清凉高跟，美翻天！
-		                    <a class="btn btn-default" href="/Account/Login">
+		                    <a class="btn btn-default" href="/Account/Register">
 		                        加入会员
 		                    </a>
 		                </p>
 		            </div>
-		        </div>
-		    </div>
-		    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		        <span class="sr-only">Previous</span>
-		    </a>
-		    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		        <span class="sr-only">Next</span>
-		    </a>
-		</div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>	
+	
+	
 		
 		<div class="row">
 		    <div class="col-md-3">
