--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -12,35 +12,35 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner">
+  <div class="carousel-inner demo demo7">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/Image/banner/banner001.png" alt="First slide">
+      <img class="d-block w-100" src="/Image/Banner/banner001.png" alt="First slide">
 		            <div class="carousel-caption" role="option">
 		                <p>
 		                    全网最新街拍合集！天天更新！
-		                    <a class="btn btn-default" href="/Account/Login">
+		                    <a class="btn btn-default text_red" href="/Account/Login">
 		                        会员限时免费试看
 		                    </a>
 		                </p>
 		            </div>	
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/Image/banner2.svg" alt="Second slide">
+      <img class="d-block w-100" src="/Image/Banner/Banner002.jpg" alt="Second slide">
 		            <div class="carousel-caption" role="option">
 		                <p>
 		                    街拍高挑美女每日更新！有惊喜！
-		                    <a class="btn btn-default" href="/Account/Register">
-		                        注册新用户
+		                    <a class="btn btn-default text_red"  href="/Account/Register">
+		                        <span>注册新用户</span>
 		                    </a>
 		                </p>
 		            </div>	
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/Image/banner3.svg" alt="Third slide">
+      <img class="d-block w-100" src="/Image/Banner/banner003.png" alt="Third slide">
 			            <div class="carousel-caption" role="option">
 		                <p>
 		                    丝袜，丝足，清凉高跟，美翻天！
-		                    <a class="btn btn-default" href="/Account/Register">
+		                    <a class="btn btn-default text_red" href="/Account/Register">
 		                        加入会员
 		                    </a>
 		                </p>
