--- a/Pic98/src/Pic98/wwwroot/tpl/Register.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Register.html
@@ -3,10 +3,7 @@
 <body>
 	{{template "nav" .}}
 
-    <div class="container body-content">
-        
-		<h2>{{.Title}}</h2>
-		
+    <div class="container body-content margin_top30">
 		<div class="row">
 		    <div class="col-md-6">
 				<form class="needs-validation" novalidate method="post" action="/Identity/Account/Register" onsubmit="return form_submit()">
