--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -1,8 +1,8 @@
 {{define "header"}}
      <head>
          <title>{{.Title}} - pic98.com [图酒吧]</title>
-        <link rel="stylesheet" href="/Css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/Css/site.css" />
+        <link rel="stylesheet" href="/Css/bootstrap.min.css?v=2018102501" />
+        <link rel="stylesheet" href="/Css/site.css?v=2018102501" />
 
      </head>
 {{end}}
