--- a/Pic98/src/Pic98/wwwroot/tpl/public/nav_m_ucenter.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/nav_m_ucenter.html
@@ -1,4 +1,4 @@
-{{define "nav"}}
+{{define "nav_m_ucenter"}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" href="#">图酒吧[pic98.com]</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,11 +8,11 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active"><a class="nav-link" href="/">首页</a></li>
-			<li class="nav-item"><a class="nav-link" href="/List/Jpmt/">街拍美腿</a></li>
-			<li class="nav-item"><a class="nav-link" href="/List/Jpgq/">高清街拍</a></li>
-			<li class="nav-item"><a class="nav-link" href="/List/Szyh/">丝足诱惑</a></li>
-			<li class="nav-item"><a class="nav-link" href="/List/Swgq/">丝袜高清</a></li>
-			<li class="nav-item"><a class="nav-link" href="/List/Gtmn/">高挑美女</a></li>
+			<li class="nav-item"><a class="nav-link" href="/Account/Setup/">网站设置</a></li>
+			<li class="nav-item"><a class="nav-link" href="/Account/User/">用户管理</a></li>
+			<li class="nav-item"><a class="nav-link" href="/Account/Dealer/">分销管理</a></li>
+			<li class="nav-item"><a class="nav-link" href="/Account/Idol/">模特管理</a></li>
+			<li class="nav-item"><a class="nav-link" href="/Account/Report/">报表中心</a></li>
 	    </ul>
 		<!--
 	    <form class="form-inline my-2 my-lg-0">
@@ -26,7 +26,6 @@
 	    </ul>
 	    <ul class="nav navbar-nav navbar-right" id="nav_ul_member" style="display: none;">
 			<li class="nav-item"><a class="nav-link" href="/Account" id="nav_ul_member_name">.</a></li>
-	        <li class="nav-item"><a class="nav-link" href="/Account">用户中心</a></li>
 	        <li class="nav-item"><a class="nav-link" href="/Account/Login?cmd=out">退出</a></li>
 	    </ul>		
 		
