--- a/Pic98/src/Pic98/wwwroot/tpl/Account.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Account.html
@@ -7,25 +7,25 @@
 		<table class="table table-borderless">
 			<tbody>
 		    	<tr>
-					<td width="150">
-						<table class="table table-hover">
+					<td width="180" bgcolor="black">
+						<table class="table table-hover" >
 						  <tbody>
 						    <tr>
-						      <th scope="row">1</th>
-						      <td>Mark</td>
+						      <td>用户信息</td>
 						    </tr>
 						    <tr>
-						      <th scope="row">2</th>
-						      <td>Jacob</td>
+						      <td>头像</td>
+						    </tr>							
+						    <tr>
+						      <td>安全设置</td>
 						    </tr>
 						    <tr>
-						      <th scope="row">3</th>
-						      <td>Larry the Bird</td>
+						      <td>钱包</td>
 						    </tr>
 						  </tbody>
 						</table>
 					</td>
-					<td bgcolor="red">
+					<td >
 					</td>
 				</tr>
 			</tbody>
