--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -14,7 +14,7 @@
   </ol>
   <div class="carousel-inner demo demo7">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/Image/Banner/banner001.png" alt="First slide">
+      <img class="d-block w-100" src="/Image/Banner/banner001.jpg" alt="First slide">
 		            <div class="carousel-caption" role="option">
 		                <p>
 		                    全网最新街拍合集！天天更新！
@@ -36,7 +36,7 @@
 		            </div>	
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/Image/Banner/banner003.png" alt="Third slide">
+      <img class="d-block w-100" src="/Image/Banner/banner003.jpg" alt="Third slide">
 			            <div class="carousel-caption" role="option">
 		                <p>
 		                    丝袜，丝足，清凉高跟，美翻天！
@@ -63,52 +63,81 @@
 		    <div class="col-md-3">
 		        <h2>街拍美腿</h2>
 <div class="wrap-box wrap-6">  
-    <div class="flex-inner">  
-      <div class="flex-box1 flex-item div_red" ></div>  
+    <div class="flex-inner ">  
+    	<div class="flex-box1 flex-item div_red"  >
+
+  			<img class="imgauto" src="Image/Vip/81313015410.jpg">
+
+		</div>  
       <div class="flex-box2">  
-        <div class="flex-item div_green"></div>  
-        <div class="flex-item"></div>  
+        <div class="flex-item div_green bbkgnd"  >
+			<img class="imgauto" src="Image/Vip/81313015410.jpg">	
+		</div>  
+        <div class="flex-item" >
+			<img class="imgauto" src="Image/Vip/81313015481.jpg">
+		</div>  
       </div>  
     </div>  
     <div class="flex-inner">  
-      <div class="flex-item div_blue"></div>  
-      <div class="flex-item div_black"></div>  
-      <div class="flex-item div_red "></div>  
+      <div class="flex-item div_blue bbkgnd"  style="background-image:url(Image/Vip/81313015410.jpg);background-size:100% 100%;" ></div>  
+      <div class="flex-item div_black bbkgnd" style="background-image:url(Image/Vip/81313015410.jpg);background-size:100% 100%;" ></div>  
+      <div class="flex-item div_red  bbkgnd" style="background-image:url(Image/Vip/81313015410.jpg);background-size:100% 100%;" ></div>  
     </div>  
 </div> 
 		    </div>
 		    <div class="col-md-3">
 		        <h2>高挑美女</h2>
-		        <ul>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-		        </ul>
+				<img class="imgauto" style="width:50%;float:left;" src="Image/Vip/81313015481.jpg">
+				<img class="imgauto" style="width:50%;float:left;" src="Image/Vip/81313015481.jpg">
+				<img class="imgauto" src="Image/Vip/81313015481.jpg">
+				<!--
+<div class="wrap-box wrap-6">  
+      <div class="flex-item bbkgnd"></div>  
+      <div class="flex-item div_blue bbkgnd"></div>  
+      <div class="flex-item div_black bbkgnd"></div>  
+</div>
+--> 
 		    </div>
 		    <div class="col-md-3">
 		        <h2>丝足诱惑</h2>
-		        <ul>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-		        </ul>
+<div class="wrap-box wrap-6">  
+      <div class="flex-item div_red bbkgnd"></div>  
+      <div class="flex-item div_blue bbkgnd"></div>  
+</div>
 		    </div>
 		    <div class="col-md-3">
 		        <h2>丝袜高清</h2>
-		        <ul>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-		            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-		        </ul>
+				<div class="wrap-box wrap-6">  
+				    <div class="flex-inner">  
+				      <div class="flex-box1 flex-item div_red bbkgnd" ></div>  
+				      <div class="flex-box2">  
+				        <div class="flex-item div_green bbkgnd"></div>  
+				      </div>  
+				    </div>  
+				    <div class="flex-inner">  
+				      <div class="flex-item div_blue bbkgnd"></div>  
+				 
+				    </div>  
+				</div> 
 		    </div>
 		</div>
-
+		
+		
+		<div class="row">
+		    <div class="col-md-2">
+			</div>
+		    <div class="col-md-2">
+			</div>
+		    <div class="col-md-2">
+			</div>
+		    <div class="col-md-2">
+			</div>
+		    <div class="col-md-2">
+			</div>
+		    <div class="col-md-2">
+			</div>
+		</div>
+			
  
     {{template "footer"}}
 	</div>
