--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -1,4 +1,6 @@
 {{define "header"}}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
      <head>
          <title>{{.Title}} - pic98.com [图酒吧]</title>
         <link rel="stylesheet" href="/Css/bootstrap.min.css?v=2018102501" />
