--- a/Pic98/src/Pic98/wwwroot/tpl/public/nav.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/nav.html
@@ -1,6 +1,6 @@
 {{define "nav"}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">图酒吧[pic98.com]</a>
+	<a class="navbar-brand" href="/">图酒吧[pic98.com]</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     	<span class="navbar-toggler-icon"></span>
 	</button>
