--- a/Pic98/src/Pic98/wwwroot/tpl/List.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/List.html
@@ -44,5 +44,6 @@
     {{template "footer"}}
 	
 	<script src="/Js/List.js"></script>
+	<script src="/Js/index_hotidol.js?20180101"></script>
 </body>
 </html>
