--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -215,10 +215,12 @@
 		</table>
 	</div>
 			
-	<div id="hotidol" class="card-columns card-columns">
+	<div id="hotidol" class="card-columns">
 
 		<div id="hotidolitem" class="card p-1">
-		  <img class="card-img-top" src="Image/Vip/81313015481.jpg" alt="Card image cap">
+			<a href="#" class="card_a">
+		  		<img class="card-img-top" src="Image/Vip/81313015481.jpg" alt="Card image cap">
+			</a>
 		<!--
 		  <div class="card-body">
 		    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -237,7 +239,7 @@
 		</table>
 	</div>
 	
-	<div id="newidol" class="card-columns card-columns">
+	<div id="newidol" class="card-columns">
 
 	</div>	
 
