--- a/Pic98/src/Pic98/wwwroot/tpl/Detail.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Detail.html
@@ -7,8 +7,8 @@
 
 			
 
-		<div >
-		  <img class="card-img-top" src="/Image/Vip/81313015481.jpg" alt="Card image cap">
+		<div style="background-color:red;text-align:center;">
+		  <img class="card-img-top imgauto img-responsive" src="{{.Listtype}}" alt="Card image cap">
 		<!--
 		  <div class="card-body">
 		    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
