--- a/Pic98/src/Pic98/wwwroot/tpl/Detail.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Detail.html
@@ -5,17 +5,16 @@
 	<input type="hidden" id="listtype" value="{{.Listtype}}" />
 	
 
-			
+	<div style="text-align:center;">
 
-		<div style="background-color:red;text-align:center;">
-		  <img class="card-img-top imgauto img-responsive" src="{{.Listtype}}" alt="Card image cap">
+		<div style="border-radius:5px;margin:8px;display: inline-block;text-align:center;padding:6px;border:1px solid gray;">
+		  <img class="card-img-top imgauto" style="display:block;" src="{{.Listtype}}" alt="Card image cap">
 		<!--
 		  <div class="card-body">
 		    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 		  </div>-->
 		</div>
-
-
+	</div>
 	
  
     {{template "footer"}}
