--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -5,6 +5,10 @@
          <title>{{.Title}} - pic98.com [图酒吧]</title>
         <link rel="stylesheet" href="/Css/bootstrap.min.css?v=2018102501" />
         <link rel="stylesheet" href="/Css/site.css?v=201810250305" />
-
+        <script src="/Js/jquery.js"></script>
+      	<script src="/Js/jquery.cookie.js"></script>
+        <script src="/Js/jquery.form.js"></script>
+        <script src="/Js/bootstrap.min.js"></script>
+        <script src="/Js/site.js"></script>
      </head>
 {{end}}
