--- a/Pic98/src/Pic98/wwwroot/tpl/Account.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Account.html
@@ -2,14 +2,13 @@
 <body>
 	{{template "nav" .}}
 	
-	<div class="margin_top30" style="">
-  
-  
-    <div class="row">
-      <div class="col-1" style="min-width:150px; margin:8px;">
+	<div id="lrcontainer">
+
+    <div id="lrwrapper">
+      <div id="lrsidebar" style="margin-right:6px;" >
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
-            发表文章
+            文章管理
           </a>
           <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">
             收益
@@ -22,10 +21,10 @@
           </a>
         </div>
       </div>
-      <div class="col">
+      <div id="lrmain">
         <div class="tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-            {{template "Post" .}}
+            {{template "Article" .}}
           </div>
           <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
             2...
@@ -36,7 +35,10 @@
           <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
             4...
           </div>
+       
         </div>
+      </div>
+      <div style="clear:both;">
       </div>
     </div>
 	</div>
