--- a/Pic98/src/Pic98/wwwroot/tpl/Post.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Post.html
@@ -6,7 +6,7 @@
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
     <script type="text/javascript" charset="utf-8" src="/3rd/UMeditor/utf8-php/lang/zh-cn/zh-cn.js"></script>
 
-
+<div>
 <form name='form66' action="Post" method="post">
   <div class="form-group">
     <label for="exampleFormControlInput1">标题</label>
@@ -42,7 +42,9 @@
 
   <div class="form-group">
     <label for="exampleFormControlTextarea1">文章</label>
-    <script id="editor" type="text/plain" style="width:1024px;height:500px;">
+
+      <script id="editor" type="text/plain" style="width:80%;height:500px;">
+
    
     </script>
     
@@ -66,6 +68,7 @@
 */
       
       $(document).ready(function() {
+
         $("#tijiao").click(function(){
         $("form[name='form66']").on('submit', function() {
           alert("shit submit");
@@ -86,6 +89,6 @@
   </div>
   <button id="tijiao" type="button" class="btn btn-primary">发表文章</button>
 </form>
-
+</div>
 	
 {{end}}
