--- a/Pic98/src/Pic98/wwwroot/tpl/Article.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Article.html
@@ -55,11 +55,11 @@
       <div class="modal-body">
 
 
-    <script type="text/javascript" charset="utf-8" src="/3rd/UMeditor/utf8-php/ueditor.config.js?id=1002"></script>
-    <script type="text/javascript" charset="utf-8" src="/3rd/UMeditor/utf8-php/ueditor.all.min.js"> </script>
+    <script type="text/javascript" charset="utf-8" src="/static/3rd/UMeditor/utf8-php/ueditor.config.js?id=1002"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/3rd/UMeditor/utf8-php/ueditor.all.min.js"> </script>
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
-    <script type="text/javascript" charset="utf-8" src="/3rd/UMeditor/utf8-php/lang/zh-cn/zh-cn.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/3rd/UMeditor/utf8-php/lang/zh-cn/zh-cn.js"></script>
 
 <div>
 <form name='form66' action="Post/" method="post">
@@ -118,7 +118,7 @@
     </script>
     
     <script type="text/javascript">
-      window.UEDITOR_HOME_URL = "/3rd/UMeditor/utf8-php/"
+      window.UEDITOR_HOME_URL = "/static/3rd/UMeditor/utf8-php/"
       var ue = UE.getEditor('editor123');
       
       $(document).ready(function() {
