--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -249,6 +249,6 @@
 
     {{template "footer"}}
 	</div>
-	<script src="/Js/index_hotidol.js?20180104"></script>
+	<script src="/static/js/index_hotidol.js?20180104"></script>
 </body>
 </html>
