--- a/Pic98/src/Pic98/wwwroot/tpl/Login.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Login.html
@@ -38,7 +38,7 @@
  
     {{template "footer"}}
 
-	<script src="/Js/md5.js"></script>
+	<script src="/static/js/md5.js"></script>
 	<script>
 	
 	function form_submit(){
