--- a/Pic98/src/Pic98/wwwroot/tpl/Index.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Index.html
@@ -206,7 +206,11 @@
 		</div>
 	</div>
 -->
-    <div style="margin-top:8px;margin-bottom:3px;" >
+  
+
+  
+  
+  <div style="margin-top:8px;margin-bottom:3px;display:hidden;" >
 		<table style="width:100%;">
 			<tr>
 				<td><span class="f16">最热爱豆 HOT HOT HOT</span></td>
@@ -214,31 +218,9 @@
 			</tr>
 		</table>
 	</div>
-<!--
-  
-<div class="masonry" id="box">
-    <div class="item"><img src="/thumbnail/Image/Vip/2019/02/0106350817_81313015453.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-
-    <div class="item"><img src="/thumbnail///Image/Vip/2019/02/010610468_81313015470.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-    <div class="item"><img src="/thumbnail///Image/Vip/2019/02/010610468_81313015470.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-    <div class="item"><img src="/thumbnail///Image/Vip/2019/02/010610468_81313015470.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-    <div class="item"><img src="/thumbnail///Image/Vip/2019/02/010610468_81313015470.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-    <div class="item"><img src="/thumbnail///Image/Vip/2019/02/010610468_81313015470.jpg?guid=30773983-664c-404a-86f8-5e9a773341d1" alt=""></div>
-</div>
--->
 	
 	<div id="hotidol" >
     <div class="card-columns">
-    <!--    
-      <div  class="card p-1 box-cc">1</div>
-      <div  class="card p-1 box-cc">2</div>
-      <div  class="card p-1 box-cc">3</div>
-      <div  class="card p-1 box-cc">4</div>
-      <div  class="card p-1 box-cc">5</div>
-      <div  class="card p-1 box-cc">6</div>
-    -->
-   
-  
   		<div  class="card p-1 box-cc">
   			<a href="#" class="card_a">
   		  		<img class="card-img-top" src="Image/Vip/81313015481.jpg" alt="Card image cap">
@@ -247,30 +229,8 @@
     </div>
 	</div>
   
-  <!--
-  	<div id="hotidol" class="card-columns">
-    <div  class="card p-1 box-cc">1</div>
-    <div  class="card p-1 box-cc">2</div>
-    <div  class="card p-1 box-cc">3</div>
-    <div  class="card p-1 box-cc">4</div>
-    <div  class="card p-1 box-cc">5</div>
-    <div  class="card p-1 box-cc">6</div>
-    <div  class="card p-1 box-cc">7</div>
-    <div  class="card p-1 box-cc">8</div>
-    <div  class="card p-1 box-cc">9</div>
-    <div  class="card p-1 box-cc">10</div>
-    <div  class="card p-1 box-cc">11</div>
-    <div  class="card p-1 box-cc">12</div>
-    <div  class="card p-1 box-cc">13</div>
-    <div  class="card p-1 box-cc">14</div>
-    <div  class="card p-1 box-cc">15</div>
-    <div  class="card p-1 box-cc">16</div>
-   
 
-	</div>
-  -->
-
-    <div style="margin-top:8px;margin-bottom:3px;" >
+  <div style="margin-top:8px;margin-bottom:3px;" >
 		<table style="width:100%;">
 			<tr>
 				<td><span class="f16">最新美腿 NEW NEW NEW</span></td>
@@ -289,7 +249,7 @@
 
     {{template "footer"}}
 	</div>
-	<script src="/static/js/index_hotidol.js?201801090"></script>
+	<script src="/static/js/index_hotidol.js?2018010902"></script>
 
 <script>
   
