--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -1,14 +1,19 @@
 {{define "header"}}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-     <head>
-         <title>{{.Title}} - pic98.com [图酒吧]</title>
-        <link rel="stylesheet" href="/static/css/bootstrap.min.css?v=2018102501" />
-        <link rel="stylesheet" href="/static/css/site.css?v=20181025030508" />
-        <script src="/static/js/jquery.js"></script>
-      	<script src="/static/js/jquery.cookie.js"></script>
-        <script src="/static/js/jquery.form.js"></script>
-        <script src="/static/js/bootstrap.min.js"></script>
+    <head>
+      <title>{{.Title}} - pic98.com [图酒吧]</title>
+      <meta name="keywords" content="摄影，街拍，丝袜，美腿，约拍，外拍模特" />
+      <meta name="description" content="全网最新，最全街拍美腿，高清图片，丝袜视频，同城交友，约拍，没有看不到！只有想不到！" />
+      <link rel='prev' title='街拍高清' href='http://www.pic98.com' />
+      <link rel='next' title='角色扮演' href='http://www.pic98.com' />
+      <link rel="canonical" href="http://www.pic98.com" />      
+      <link rel="stylesheet" href="/static/css/bootstrap.min.css?v=2018102501" />
+      <link rel="stylesheet" href="/static/css/site.css?v=20181025030508" />
+      <script src="/static/js/jquery.js"></script>
+      <script src="/static/js/jquery.cookie.js"></script>
+      <script src="/static/js/jquery.form.js"></script>
+      <script src="/static/js/bootstrap.min.js"></script>
         
      </head>
 {{end}}
