--- a/Pic98/src/Pic98/wwwroot/tpl/Register.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Register.html
@@ -42,7 +42,7 @@
     </div>
  
     {{template "footer"}}
-	<script src="/Js/md5.js"></script>
+	<script src="/static/js/md5.js"></script>
 	<script>
 		var nameok = false;
 		function name_onchange(){
