--- a/Pic98/src/Pic98/wwwroot/tpl/Topic.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Topic.html
@@ -4,6 +4,9 @@
   <h1 style="display:none;">{{.Title}}</h1>
 	<input type="hidden" id="listtype" value="{{.Listtype}}" />
   <div>
+    <div>
+    <h3>{{.Title}}</h3>
+    </div>
     <div class="topic_any" style="text-align:center;margin:16px;">
       {{.Any}}
     </div>
