--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -10,10 +10,7 @@
       <link rel="canonical" href="http://www.pic98.com" />      
       <link rel="stylesheet" href="/static/css/bootstrap.min.css?v=2018102501" />
       <link rel="stylesheet" href="/static/css/site.css?v=20181025030511" />
-      <script src="/static/js/jquery.js"></script>
-      <script src="/static/js/jquery.cookie.js"></script>
-      <script src="/static/js/jquery.form.js"></script>
-      <script src="/static/js/bootstrap.min.js"></script>
-        
+
+<meta name="baidu_union_verify" content="887272c620c675eb51040c1a68de4752">        
      </head>
 {{end}}
