页面模板修改
啊啊啊

--- a/Pic98/src/Pic98/wwwroot/tpl/List.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/List.html
@@ -2,7 +2,7 @@
 <body>
 	{{template "nav" .}}
 
-	<input type="hidden" id="listtype" value="{{.Listtype}}" />
+	<input type="hidden" id="listtype" value="{{.Data}}" />
 	
 
     <div style="margin-top:8px;margin-bottom:3px;" >
@@ -41,7 +41,7 @@
 	</div>	
 	
  
-    {{template "footer"}}
+    {{template "footer" .}}
 	
 	<script src="/Js/List.js"></script>
 	<script src="/Js/index_hotidol.js?20180101"></script>
