--- a/Pic98/src/Pic98/wwwroot/tpl/Register.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/Register.html
@@ -12,7 +12,7 @@
 					  <label for="exampleInputEmail1">您要注册的用户名：</label>
 					  <input type="text" class="form-control" id="name" onchange="name_onchange()" aria-describedby="emailHelp" placeholder="" required>
 				        <div class="invalid-feedback">
-				          请填写一个您中意得用户名。
+				          用户名为空或者已被占用！请选择其他用户名。
 				        </div>					
 					  <small id="emailHelp" class="form-text text-muted">用户名为字母(a-z,A-Z)开头包含数字(0-9)和_的组合.</small>
 					</div>
@@ -41,7 +41,7 @@
 		</div>
     </div>
  
-    {{template "footer"}}
+    {{template "footer" .}}
 	<script src="/static/js/md5.js"></script>
 	<script>
 		var nameok = false;
@@ -57,7 +57,7 @@
 				if(json.status != 0){
 					alert(json.msg);
 				}
-			    if(json.data.CheckId == 0){
+			  if(json.data.CheckId == 0){
 					nameok = true;
 					$("#name").get(0).setCustomValidity("");
 				}else{
@@ -163,11 +163,7 @@
   'use strict';
   window.addEventListener('load', function() {
     var forms = document.getElementsByClassName('needs-validation');
-	
-
-
-	
-    var validation = Array.prototype.filter.call(forms, function(form) {
+	    var validation = Array.prototype.filter.call(forms, function(form) {
       form.addEventListener('submit', function(event) {
         if (form.checkValidity() === false) {
           event.preventDefault();
