--- a/Pic98/src/Pic98/wwwroot/tpl/public/header.html
+++ b/Pic98/src/Pic98/wwwroot/tpl/public/header.html
@@ -2,15 +2,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>{{.Title}} - pic98.com [图酒吧]</title>
-      <meta name="keywords" content="摄影，街拍，丝袜，美腿，约拍，外拍模特" />
-      <meta name="description" content="全网最新，最全街拍美腿，高清图片，丝袜视频，同城交友，约拍，没有看不到！只有想不到！" />
+      <title>{{.Title}} - {{.SiteName}}</title>
+      <meta name="keywords" content="{{.Keywords}}" />
+      <meta name="description" content="{{.Description}}" />
       <link rel='prev' title='街拍高清' href='http://www.pic98.com' />
       <link rel='next' title='角色扮演' href='http://www.pic98.com' />
       <link rel="canonical" href="http://www.pic98.com" />      
       <link rel="stylesheet" href="/static/css/bootstrap.min.css?v=2018102501" />
       <link rel="stylesheet" href="/static/css/site.css?v=20181025030511" />
-
-<meta name="baidu_union_verify" content="887272c620c675eb51040c1a68de4752">        
+      <meta name="baidu_union_verify" content="887272c620c675eb51040c1a68de4752">      
+      <script src="/static/js/jquery-3.3.1.min.js"></script>  
      </head>
 {{end}}
